--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^16.6.1",
     "express": "^5.2.1",
+    "openai": "^6.15.0",
     "viem": "^2.0.0"
   },
   "devDependencies": {
