--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@x402/express": "^2.1.0",
     "@x402/paywall": "^2.1.0",
     "@x402/svm": "^2.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^5.2.1",
     "openai": "^6.15.0",
     "viem": "^2.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^20.0.0",
     "ts-node": "^10.9.0",
